# animatedtalkingheads.api

./: Jenkins  Jenkinsfile  README.md  package-lock.json
.circleci/: .config.yml.swp  .config_LOCAL_1944.yml.swp  .config_REMOTE_1944.yml.swp  config.yml  config_BACKUP_1944.yml  config_REMOTE_1944.yml
.github/: config.yml
.github/workflows/: config.yml
node-backend/: .env  .eslintrc.json  .gitignore  .rest  Dockerfile  README.md  deploy.sh  docker-compose.yml  index.js  package-lock.json  package.json  schema.json  tsconfig.json
node-backend/_helpers/: db.js  send-email.js
node-backend/controllers/: animatedvideo.controller.js  auth.js  avatars.js  chatBot.js  contact.js  error.controller.js  payment.js  paymentConfig.js  podcast.controller.js  podcastdeleter.js  podcastgetter.js  rauth.js  userSettings.js
node-backend/docs/: basicInfo.js  components.js  index.js  servers.js  tags.js
node-backend/routes/: .rest
pyhton-backend/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  result.txt  setup.py  tox.ini
pyhton-backend/.github/workflows/: tests.yaml
pyhton-backend/data/Image/: README.md
pyhton-backend/data/audio_metadatas/: 83e28f2e-52e6-47d1-ba80-7cc7248b757e.json  a8de089f-92c4-4295-9365-705bd9826fc9.json  b199a9d3-105a-437f-a7a9-ca6f20b28bac.json  e4f3eb80-9015-4b7e-ae13-93a645adbc65.json  f6f1e9e1-8180-4c88-8d0b-67bac3c48fc2.json
pyhton-backend/data/user_data/cxse-dder-54ffc/: diarization.json
pyhton-backend/src/podcast_animator/: config.py  implememt_ideas.py  main.py  start.py
pyhton-backend/src/podcast_animator/Features/: Feature.py  avatarFeature.py  canvas.py  eyeFeature.py
pyhton-backend/src/podcast_animator/analysis/: SpeakerDiarization.py  animation_frame_constructor.py  assembly_analyser.py  diariazer.py  eyes_emotions.py  frame.py  mouth_shapes.py  phonemes.py  phonemic_emphasis.py  utterance_analyzer.py  whisper_analyser.py  word_analyzer.py  wordframe.py
pyhton-backend/src/podcast_animator/analysis/models/: analyzer.py  utterance.py  word.py
pyhton-backend/src/podcast_animator/analysis/utils/: mouth_shapes.py
pyhton-backend/src/podcast_animator/analysis/wavelenght/: wave_analyser.py
pyhton-backend/src/podcast_animator/analysis/word_and_speaker_diarizer/: README.md
pyhton-backend/src/podcast_animator/analysis/word_and_speaker_diarizer/diarizer/: Word.py  diarizer.py  setup.py  speaker.py  word_and_timeline.py
pyhton-backend/src/podcast_animator/components/: speaker.py
pyhton-backend/src/podcast_animator/generator/: canvas.py  main.py  pipeline.py  processors.py
pyhton-backend/src/podcast_animator/generator/components/: SchemaTree.py  animator.py  background_animator.py  data_schemer.py  emotion_generator.py  emotions.py  ffmpeg_video_writer.py  image_generator.py  parser.py  parser_two.py  sounds_and_emotions_sq.py  speech.py
pyhton-backend/src/podcast_animator/generator/filters/: background_filter.py  eye_filter.py  face_filter.py  filter.py  word_filter.py
pyhton-backend/src/podcast_animator/generator/generator/filters/: eye_filter.py
pyhton-backend/src/podcast_animator/util2/: avatarFeature.py  backgroundfeature.py  eyemovements.py  mouthfeature.py  subtitles.py
pyhton-backend/src/podcast_animator/utils/: animation_settings.py  dataschema.py  exec_time.py  file_handlers.py  handler.py  image_processing.py  json_handler.py  mouth_shapes.py  processors.py
pyhton-backend/test_data/: meta.json
pyhton-backend/tests/: conftest.py  emotion_test.py  test_processors.py  test_word_filter.py
pyhton-backend/tests/test_generator/: conftest.py  ntest_processor.py  test_canvas.py  test_pipeline.py
python-backend/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements_dev.txt  setup.py
(+109 files in other folders)
